fix: inventory dupe bug, unscramble spaces, and permission-based tab complete
- Fix auction GUI inventory interaction bug caused by missing PlayerQuitEvent cleanup
  (player UUID stayed in openGUIs map after disconnect, blocking all inventory clicks on rejoin)
- Fix unscramble chat game to scramble each word separately instead of mixing spaces in
- Add permission-based tab complete filtering to all command tab completers
  (bounty, chatgames, jobs, lottery admin subcommands now hidden without permission)