@@ -6,6 +6,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -15,13 +16,18 @@ public class ChatGamesTabCompleter implements TabCompleter {
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
         if (args.length == 1) {
-            return filter(Arrays.asList("start", "stop", "top", "stats", "reload"), args[0]);
+            List<String> subs = new ArrayList<>(Arrays.asList("top", "stats"));
+            if (sender.hasPermission("horizonutilities.chatgames.admin")) {
+                subs.addAll(Arrays.asList("start", "stop", "reload"));
+            }
+            return filter(subs, args[0]);
         }
 
         if (args.length == 2) {
             return switch (args[0].toLowerCase()) {
-                case "start" -> filter(Arrays.asList(
-                        "unscramble", "retype", "math", "unreverse", "recipe-guess"), args[1]);
+                case "start" -> sender.hasPermission("horizonutilities.chatgames.admin")
+                        ? filter(Arrays.asList("unscramble", "retype", "math", "unreverse", "recipe-guess"), args[1])
+                        : List.of();
                 case "stats" -> Bukkit.getOnlinePlayers().stream()
                         .map(Player::getName)
                         .filter(n -> n.toLowerCase().startsWith(args[1].toLowerCase()))
